# pose_skeletons

./: .gitignore  README.md  pyproject.toml
examples/: print_definition.py  standard_joints.ipynb
src/pose_skeletons/: __init__.py  definition.py  generate_skeleton_def.py
src/pose_skeletons/definitions/: coco17.py  mediapipe33.py  optitrack.py  smpl.py  smplh.py  smplx.py  stereolabs_body18.py  stereolabs_body34.py  xsens.py
