[project]
name = "pose-skeletons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.13.0",
]

[dependency-groups]
dev = [
    "bvhtoolbox>=0.1.3",
    "jupyter>=1.1.1",
    "k3d>=2.17.0",
    "pose-skeletons",
    "ruff>=0.14.8",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pose-skeletons = { workspace = true }

[project.scripts]
generate_skeleton_def = "pose_skeletons:generate_skeleton_def"
