[project]
name = "pose_skeletons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anytree>=2.13.0",
    "bvhtoolbox>=0.1.3",
]

[dependency-groups]
dev = [
    "ipympl>=0.9.8",
    "jupyter>=1.1.1",
    "k3d>=2.17.0",
    "matplotlib>=3.10.8",
    "ruff>=0.14.8",
    "pose_skeletons",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pose-skeletons = { workspace = true }

[project.scripts]
generate_skeleton_def = "pose_skeletons:generate_skeleton_def"
